--- a/res/config.yml
+++ b/res/config.yml
@@ -1,2 +1,5 @@
 port: 10000
 data_directory: "data/"
+# This is only necessary if you're running the website version of the frontend.
+# A wildcard (*) can be specified at the start of the domain (e.g. "*.frontend.domain")
+frontend_domain: "my.frontend.domain"
